--- a/krwiki.html
+++ b/krwiki.html
@@ -133,24 +133,25 @@
       <tr><th>일본어 표기</th><td>外峯 零<sup><a href="#ref1" id="note1">[1]</a></sup></td></tr>
       <tr><th>로마자 표기</th><td>Gaine Null</td></tr>
       <tr><th>성별</th><td>N/A<sup><a href="#ref2" id="note2">[2]</a></sup></td></tr>
+      <tr><th>종족</th><td>개념생명체</td></tr>
       <tr><th>연령</th><td>[외관]<sup><a href="#ref3" id="note3">[3]</a></sup> 20대 초반</td></tr>
       <tr><th>생일</th><td>19██년 10월 2일</td></tr>
       <tr><th>신장</th><td>148.2cm ／ 153.0cm<sup><a href="#ref4" id="note4">[4]</a></sup></td></tr>
-      <tr><th>종족</th><td>개념생명체</td></tr>
-      <tr><th>능력</th><td>아카식 레코드<sup><a href="#ref5" id="note5">[5]</a></sup> 접속, 세계 관측, 차원 이동</td></tr>
-      <tr><th>핸디캡</th><td>신체능력</td></tr>
       <tr><th>MBTI</th><td>INTP</td></tr>
+      <tr><th>능력</th><td>아카식 레코드<sup><a href="#ref5" id="note5">[5]</a></sup> 접속, 세계 관측, 차원 이동</td></tr>
       <tr><th>좋아하는 음식</th><td>애플파이</td></tr>
       <tr><th>모티브</th><td>히비스커스, 사과</td></tr>
-      <tr><th>팬덤명</th><td>누르마유</td></tr>
+      <tr><th>팬덤 애칭</th><td>누르마유 (ぬるまゆ)</td></tr>
       <tr><th>이미지 컬러</th><td style="color: #b7282e;">#b7282e</td></tr>
+      <tr><th>소속</th><td>없음</td></tr>
       <tr><th>디자인</th><td>가이네 누르</td></tr>
       <tr><th>Live2D</th><td>イトリ</td></tr>
+      <tr><th>데뷔</th><td>2023년 2월 10일</td></tr>
       <tr><th>링크</th><td> . </td></tr>
     </table>
 
     <div class="relation-tabs">
-      <div class="relation-tab active" onclick="showTab(0)">나가메바나</div>
+      <div class="relation-tab active" onclick="showTab(0)">나가메바나 (詠花)</div>
       <div class="relation-tab" onclick="showTab(1)">1</div>
       <div class="relation-tab" onclick="showTab(2)">2</div>
     </div>
