--- a/krwiki.html
+++ b/krwiki.html
@@ -144,10 +144,10 @@
       <tr><th>팬덤 애칭</th><td>누르마유 (ぬるまゆ)</td></tr>
       <tr><th>이미지 컬러</th><td style="color: #b7282e;">#b7282e</td></tr>
       <tr><th>소속</th><td>없음</td></tr>
-      <tr><th>디자인</th><td>가이네 누르</td></tr>
-      <tr><th>Live2D</th><td>イトリ</td></tr>
+      <tr><th>디자인</th><td><a href="https://twitter.com/tonamachimoca/">moca</a>[1.0], 본인[2.0]</td></tr>
+      <tr><th>Live2D</th><td><a href="https://twitter.com/Ytori_3939/">イトリ</a></td></tr>
       <tr><th>데뷔</th><td>2023년 2월 10일</td></tr>
-      <tr><th>링크</th><td> . </td></tr>
+      <tr><th>링크</th><td><a href="https://twitter.com/gaine_0/">트위터</a> <a href="https://www.youtube.com/@Gaine_0">유튜브</a> <a href="https://soundcloud.com/not-sotomine">사운드클라우드</a></td></tr>
     </table>
 
     <div class="relation-tabs">
@@ -157,7 +157,7 @@
     </div>
 
     <div class="relation-content active">
-      <strong>詠花</strong> - <strong>히스이 레테</strong>와의 2인 유닛이다.
+      <strong>詠花</strong> - <strong><a href="https://twitter.com/SheephaeaL/">히스이 레테</a></strong>와의 2인 유닛이다.
     </div>
     <div class="relation-content">
       <strong>1</strong>
@@ -184,6 +184,10 @@
     </li>
     <li id="ref5">
       <a href="#note5">[5]</a> 모든 세계의 정보를 기록한 개념상의 데이터베이스.
+    </li>
+    </li>
+    <li id="ref6">
+      <a href="#note6">[5]</a> 모든 세계의 정보를 기록한 개념상의 데이터베이스.
     </li>
   </ol>
 </div>
