--- a/main.html
+++ b/main.html
@@ -31,6 +31,16 @@
       </div>
     </header>
     <main>
+        <section class="hero" aria-label="メインビジュアル">
+    <img src="image/main_2.png" alt="江縫栄市立総合病院 メインビジュアル">
+    <!-- 画像の上に重ねるコピー（任意） -->
+    <div class="hero-copy">
+      <h1>市民の心身の安寧と、回復</h1>
+      <p>健康の為日々邁進して参ります</p>
+      <!-- CTAがあればボタンを置ける -->
+      <!-- <a class="btn" href="/contact">お問い合わせ</a> -->
+    </div>
+  </section>
       <div class="info">
         <div class="text">
           <p id="text1">市民の心身の安寧と、回復</p><br>
@@ -45,3 +55,4 @@
     </footer>
   </body>
 </html>
+
