--- a/main.html
+++ b/main.html
@@ -1,58 +1,48 @@
 <!DOCTYPE html>
 <html lang="ja-JP">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title></title>
+    <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="style1.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <div class="header-top">
-        <div class="logo">
-        </div>
-        <div  class="search">
-          <input class="search-text" type="text"  placeholder="検索語を入力します" onkeyup="enterkeySearch()"/>
-          <button class="search-btn" type="submit"></button>
-        </div>
-      </div>
-      <div class="nav">
-        <ul>
-          <li><a href="#">紹介</a></li>
-          <li><a href="https://hospinfo-enuei-city.org/guideline">利用規約</a></li>
-          <li><a href="https://hospinfo-enuei-city.org/utamihon">図書館</a></li>
-          <li><a href="#">関連情報</a></li>
-          <li><a href="#">連絡所</a></li>
-          <li><a href="#">お問い合わせ</a></li>
-        </ul>
-      </div>
-    </header>
-    <main>
-        <section class="hero" aria-label="メインビジュアル">
-    <img src="image/main_2.png" alt="江縫栄市立総合病院 メインビジュアル">
-    <!-- 画像の上に重ねるコピー（任意） -->
-    <div class="hero-copy">
-      <h1>市民の心身の安寧と、回復</h1>
-      <p>健康の為日々邁進して参ります</p>
-      <!-- CTAがあればボタンを置ける -->
-      <!-- <a class="btn" href="/contact">お問い合わせ</a> -->
-    </div>
-  </section>
-      <div class="info">
-        <div class="text">
-          <p id="text1">市民の心身の安寧と、回復</p><br>
-          <p id="text2">健康の為日々邁進して参ります</p></div>
-      </div>
-    </main>
-    <footer>
-      <p>© 2011 CU1000 N/A City General Hospital, All rights reserved.</p>
-      <div class="page-top">
-        <p>▲ TOP</p>
-      </div>
-    </footer>
-  </body>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200..900&display=swap" rel="stylesheet">
+</head>
+<body>
+<header>
+<div class="header-top">
+<div class="logo">
+</div>
+<div  class="search">
+<input class="search-text" type="text"  placeholder="検索語を入力します" onkeyup="enterkeySearch()"/>
+<button class="search-btn" type="submit"></button>
+</div>
+</div>
+<div class="nav">
+<ul>
+<li><a href="#">紹介</a></li>
+<li><a href="https://hospinfo-enuei-city.org/guideline">利用規約</a></li>
+<li><a href="https://hospinfo-enuei-city.org/utamihon">図書館</a></li>
+<li><a href="#">関連情報</a></li>
+<li><a href="#">連絡所</a></li>
+<li><a href="#">お問い合わせ</a></li>
+</ul>
+</div>
+</header>
+<main>
+<div class="info">
+<div class="text">
+<p id="text1">市民の心身の安寧と、回復</p><br>
+<p id="text2">健康の為日々邁進して参ります</p></div>
+</div>
+</main>
+<footer>
+<p>© 2011 CU1000 N/A City General Hospital, All rights reserved.</p>
+<div class="page-top">
+<p>▲ TOP</p>
+</div>
+</footer>
+</body>
 </html>
-
