Fix HTML encoding issues in 20230210.html

--- a/20230210.html
+++ b/20230210.html
@@ -83,7 +83,7 @@
         "おはよ": "おはよう。もう朝かい？それとも今起きた感じ？",
         "こんに": "こんにちは。そこは昼かな？",
         "はじめまして": "ああ、はじめまして。君がここに来るのは、必然だったのかもね",
-        "見えてる": "うん、ちゃんと見えてるならよかった。見えてないふりをすることもできるのにね",
+        "見えてる": "うん、ちゃんと見えているならよかった。見えないふりをすることもできるのにね",
         "赤": "空が赤い時は、あの子が視てるらしいよ。見返さないほうがいい",
         "熱的死": "死んだ宇宙はぐしゃぐしゃにして捨てる。どうせ誰も拾わないし、拾えないしね",
         "空": "空が赤い時は気をつけなよ。本気で。何回も見たんだ、目が合っただけで狂った内側の人を",
@@ -96,17 +96,18 @@
         "怪異": "どこにでもあるよ。認識しないだけでね",
         "SCP": "うちとは関係ない。まあ、観測はしてるけど",
         "しらせ": "俺が知ってるしらせが君の知ってるしらせとは限らない",
-"記憶": "時間の中に置き去りにされた、忘れられないもの",
-"忘": "忘れることと、忘れられることは違うんだよ",
-"曖昧だ": "境界線なんて、引く側の気分次第だからな",
-"0": "何もないことと、始まりであることは、同じだと思うか？",
-"街": "知ってるか？「外」ってのは、思ってるよりずっと広い",
-"蚊帳の外": "見えていないのか、見ていないのか。どっちだろうな",
-"髪": "長さや色に意味を持たせたがるのは、人間の癖だよな",
-"神": "呼び名をつけただけで、理解した気になれるんだから、すごいよな。人間",
-"概念": "名前をつけた時点で、それはもう別物になってる",
-"時代": "流れているんじゃない、積み重なっているんだよ",
-        "箱": "どれが本物かなんて、最初から決まってないよ"
+        "記憶": "時間の中に置き去りにされた、忘れられないものだ",
+        "忘": "忘れることと、忘れられることは違うんだよ",
+        "曖昧だ": "境界線なんて、引く側の気分次第だからね",
+        "0": "何もないことと、始まりであることは、同じだと思うかい？",
+        "街": "知ってるかい？「外」ってのは、思ってるよりずっと広い",
+        "蚊帳の外": "見えていないのか、見ていないのか。どっちだろうね",
+        "髪": "長さや色に意味を持たせたがるのは、人間の癖だ",
+        "神": "呼び名をつけただけで、理解した気になれるんだから、すごいさ。人間は",
+        "概念": "名前をつけた時点で、それはもう別物になってる",
+        "時代": "流れているんじゃない、積み重なっているんだよ。君にどう見えるかは大事じゃない",
+        "はてな": "はて……それは誰のことかな？",
+        "箱": "どれが本物かなんて、最初から何一つ決まってないよ"
     };
 
     // メッセージに反応するかチェック
@@ -144,3 +145,4 @@
 
 </body>
 </html>
+
