--- a/search.html
+++ b/search.html
@@ -1,95 +1,24 @@
 <!DOCTYPE html>
-<html lang="ja-JP">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>検索結果</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>サイト内検索 | 江縫栄市立総合病院</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>検索結果</h1>
-    </header>
+  <div id="header"></div>
+  <main id="main"></main>
+  <div id="footer"></div>
 
-    <!-- Navigation -->
-    <nav class="nav">
-        <ul>
-            <li><a href="#">紹介</a></li>
-            <li><a href="https://hospinfo-enuei-city.org/guideline">利用規約</a></li>
-            <li><a href="https://hospinfo-enuei-city.org/utamihon">図書館</a></li>
-            <li><a href="#">関連情報</a></li>
-            <li><a href="#">連絡所</a></li>
-            <li><a href="#">お問い合わせ</a></li>
-        </ul>
-    </nav>
-    
-    <!-- Main Content -->
-    <main>
-        <div id="search-results">
-            <p>検索中...</p>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2011 CU1000 N/A City General Hospital, All rights reserved.</p>
-    </footer>
-
-    <!-- Search Script -->
-    <script>
-        // 検索 가능한 페이지 목록
-        const pages = {
-            "削除される記録": {title: "間違ったパスです", url: "https://hospinfo-enuei-city.org/d_archive"},
-            "韓国語": {title: "한국어", url: ["https://hospinfo-enuei-city.org/ko-dex", "https://hospinfo-enuei-city.org/irrumderwelt-k", "https://hospinfo-enuei-city.org/notice404-k"]},
-            "アクセス": {title: "アクセス情報", url: "https://youtube.com/gaine_0"},
-            "英語": {title: "English", url: ["https://hospinfo-enuei-city.org/en-dex", "https://hospinfo-enuei-city.org/irrumderwelt-e"]},
-            "利用規約": {title: "利用規約", url: "https://hospinfo-enuei-city.org/guideline"},
-            "図書館": {title: "図書館", url: "https://hospinfo-enuei-city.org/utamihon"}
-        };
-
-        // クエリパラメータ取得関数
-        function getQueryParam(name) {
-            const params = new URLSearchParams(window.location.search);
-            return params.get(name);
-        }
-
-        // 検索結果表示関数
-        function displayResults() {
-            const keyword = getQueryParam("q");
-            const resultsDiv = document.getElementById("search-results");
-            resultsDiv.innerHTML = ""; // 초기화
-
-            console.log('検索キーワード:', keyword); // 디버그용
-
-            // 검색 키워드가 없거나 페이지 목록에 없는 경우
-            if (!keyword || !(keyword in pages)) {
-                resultsDiv.innerHTML = "<p>そんなのはまだ此処に無いよ。</p>";
-                return;
-            }
-
-            // 해당하는 검색 결과 표시
-            const result = pages[keyword];
-            let resultLinks = "";
-
-            if (Array.isArray(result.url)) {
-                result.url.forEach((url, index) => {
-                    resultLinks += `<li><a href="${url}" target="_blank">${result.title} (${index + 1})</a></li>`;
-                });
-            } else {
-                resultLinks = `<li><a href="${result.url}" target="_blank">${result.title}</a></li>`;
-            }
-
-            resultsDiv.innerHTML = `
-                <p>「${keyword}」に関する情報はこちら:</p>
-                <ul>
-                    ${resultLinks}
-                </ul>
-            `;
-        }
-
-        // 페이지 로드 시 검색 결과 표시
-        window.onload = displayResults;
-    </script>
+  <script>
+  async function loadPart(id, file){
+    const res = await fetch(file);
+    document.getElementById(id).innerHTML = await res.text();
+  }
+  loadPart("header", "partials/header.html");
+  loadPart("main", "partials/search.html");
+  loadPart("footer", "partials/footer.html");
+  </script>
 </body>
 </html>
