--- a/links.html
+++ b/links.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>江縫栄市立総合病院</title>
+  <title>江縫栄市立総合病院 | 公式サイト</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
