--- a/nothing.html
+++ b/nothing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>江縫栄市立総合病院</title>
+  <title>検索結果（該当なし） | 江縫栄市立総合病院</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     document.getElementById(id).innerHTML = await res.text();
   }
   loadPart("header", "partials/header.html");
-  loadPart("main", "partials/main.html");
+  loadPart("main", "partials/nothing.html");
   loadPart("footer", "partials/footer.html");
   </script>
 </body>
