Update contact.html with contact details and note
Added contact information and privacy note to the contact page.

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,16 @@
 </head>
 <body>
   <div id="header"></div>
-  <main id="main"></main>
+<h1>お問い合わせ</h1>
+<div class="panel">
+  <p style="margin:0 0 6px">代表：██-████-████（平日9:00–18:00）</p>
+  <p style="margin:0 0 6px">メール：<a href="mailto:null.rei@proton.me">tellyourworld@hospinfo-enuei-city.org</a></p>
+  <p class="note">個人情報は医療目的にのみ使用します。</p>
+</div>
+
+
+
+  
   <div id="footer"></div>
 
   <script>
