--- a/prebox.html
+++ b/prebox.html
@@ -12,6 +12,8 @@
 <h1>縺励ｉ縺帙?邂ｱ</h1>
 <div class="panel">
   <p>隨ｬ蝗帙?螢√ｒ郢を繋ぐ窓口です。繧ゅ≧蟆代＠荳也阜隕ｳ縺ｫ豐｡鬆ｭ関するご質問などをお受けします。</p>
+
+  <a href="https://hospinfo-enuei-city.org/20130210" target="_blank" class="btn">窓口</a>
 </div>
   
   <div id="footer"></div>
