--- a/index_.html
+++ b/index_.html
@@ -28,9 +28,6 @@
   </div>
   <script>function go(){const v=document.getElementById('q').value;location.href='search.html?q='+encodeURIComponent(v)}</script>
   <div style="margin-top:12px">
-    <span class="badge">24時間救急</span>
-    <span class="badge">オンライン面会</span>
-    <span class="badge">医療通訳</span>
   </div>
 </section>
 
@@ -38,7 +35,7 @@
 <div class="grid">
   <div class="card"><strong><a href="hours.html">外来案内</a></strong><p class="note">受付 8:30–11:30（初診）／ 8:30–16:30（再診）</p></div>
   <div class="card"><strong><a href="news.html">お知らせ</a></strong><p class="note">最新のご案内・休診情報。</p></div>
-  <div class="card"><strong><a href="departments.html">診療科</a></strong><p class="note">内科／外科／小児科…</p></div>
+  <div class="card"><strong><a href="yesican.html">お仕事</a></strong><p class="note">依頼受付中の……</p></div>
 </div>
 <div id="footer"></div>
   <script>
