--- a/news.html
+++ b/news.html
@@ -8,7 +8,14 @@
 </head>
 <body>
   <div id="header"></div>
-  <main id="main"></main>
+
+<h1>お知らせ</h1>
+<ul class="list">
+  <li>譎ゅ?豬√ｌ縺碁?縺吶℃繧九</li>
+  <li>辟｡讖溽黄鬆ｭ蜒上?蛟倶ｽ薙?逧?ｧ倥∈</li>
+  <li>蜀??縺ｮ縺溘ａ縺ｮ縺雁?ｱ縺帙〒縺吶</li>
+</ul>
+  
   <div id="footer"></div>
 
   <script>
@@ -17,7 +24,6 @@
     document.getElementById(id).innerHTML = await res.text();
   }
   loadPart("header", "partials/header.html");
-  loadPart("main", "partials/news.html");
   loadPart("footer", "partials/footer.html");
   </script>
 </body>
