--- a/index_.html
+++ b/index_.html
@@ -34,8 +34,8 @@
 <h2>よく使うページ</h2>
 <div class="grid">
   <div class="card"><strong><a href="hours.html">外来案内</a></strong><p class="note">受付 8:30–11:30（初診）／ 8:30–16:30（再診）</p></div>
-  <div class="card"><strong><a href="news.html">お知らせ</a></strong><p class="note">最新のご案内・休診情報。</p></div>
-  <div class="card"><strong><a href="yesican.html">お仕事</a></strong><p class="note">依頼受付中の……</p></div>
+  <div class="card"><strong><a href="cafepalette.html">カフェ・パレット</a></strong><p class="note">1階のカフェサイトに繋……</p></div>
+  <div class="card"><strong><a href="yesican.html">お仕事</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
 </div>
 <div id="footer"></div>
   <script>
