--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -72,6 +72,50 @@ footer{max-width:1100px;margin:24px auto 40px;padding:0 clamp(16px,4vw,32px);col
 .popup-info h2{margin:0;font-size:28px;letter-spacing:.05em;}
 .popup-info p{margin:6px 0;font-size:14px;}
 @keyframes fade{from{opacity:0}to{opacity:1}}
+
+  :root { color-scheme: light dark; }
+  /* デフォルト（昼） */
+  html{
+    --bg:#FAF7F2; --ink:#3A3330; --line:#E8DFD6; --card:#FFFFFF;
+    --link:#FF91AF; --accent:#FF91AF; --accent-hover:#E6799F;
+  }
+  body{ background:var(--bg); color:var(--ink); }
+  .card,.panel,.list{ background:var(--card); border:1px solid var(--line); }
+  a{ color:var(--link); }
+
+  /* 端末がダーク設定のとき自動適用 */
+ @media (prefers-color-scheme: dark){
+  html{
+    --bg:#0f141a;           /* 深い群青ベース */
+    --ink:#e6edf3;          /* 少し冷たい白 */
+    --line:#1e2730;
+    --card:#162029;         /* ネイビーがかった黒 */
+    --link:#96b7ff;         /* 月光みたいな青 */
+    --accent:#7ea8ff;       /* アクセントを青寄りに */
+    --accent-hover:#98c1ff; /* ホバー時の明るい青 */
+  }
+  .badge{ background:#1c2730; border-color:var(--line); color:#c5d3de; }
+  .note{ color:#9fb2c2; }
+  .hero-full .ph{ filter:brightness(.75) contrast(1.1); }
+}
+html.theme-dark{
+  --bg:#0f141a;
+  --ink:#e6edf3;
+  --line:#1e2730;
+  --card:#162029;
+  --link:#96b7ff;
+  --accent:#7ea8ff;
+  --accent-hover:#98c1ff;
+}
+
+  /* トグルボタン（固定表示・CSSなし運用向け） */
+  #themeToggle{
+    position:fixed; right:14px; bottom:14px; z-index:9999;
+    padding:8px 12px; border-radius:999px; border:1px solid var(--line);
+    background:transparent; color:var(--ink); cursor:pointer;
+    box-shadow:0 2px 8px rgba(0,0,0,.08);
+  }
+  #themeToggle:hover{ background:rgba(255,255,255,.06); }
 </style>
 </head>
 <body>
@@ -173,7 +217,6 @@ const choco = [
   {name:"Chocolate Cremoso",hex:"#3B2A28",meta:"PANTONE 19-1117 TCX",memo:"舌の上で長く続く。"},
   {name:"Chocolate Lab",hex:"#5B4636",pantone:"PANTONE 19-1214 TCX",memo:"信頼の色、落ち着きの毛並み。"},
   {name:"Chocolate Truffle",hex:"#612E35",meta:"PANTONE 19-1526 TCX",memo:"ほのかな赤み、秘密の一粒。"},
-  {name:"Chocolate Martini",hex:"#56453F",meta:"PANTONE 19-1216 TCX",memo:"大人のほろ苦く甘いひと時。"},
   {name:"Cocoa",hex:"#584536",meta:"PANTONE 19-1119 TCX",memo:"一休みと甘さの編み合わせ。"},
   {name:"Ganache",hex:"#33292A",pantone:"PANTONE 19-1018 TCX",memo:"重く、静かに艶がある。"},
   {name:"Shaved Chocolate",hex:"#543B35",meta:"PANTONE 19-1215 TCX",memo:"薄片が舌でほどける。"},
@@ -207,6 +250,7 @@ const dessert = [
 
 const cocktail = [
   {name:"Carnival Glass",hex:"#81E5BC",meta:"RGB(129,229,188)",memo:"微光を帯びた硝子。"},
+  {name:"Chocolate Martini",hex:"#56453F",meta:"PANTONE 19-1216 TCX",memo:"大人のほろ苦く甘いひと時。"},
   {name:"Crème de Pêche",hex:"#F1C6B8",pantone:"PANTONE 12-1110 TCX",memo:"桃色のまばたき。"}
 ];
 
@@ -216,37 +260,58 @@ const cosmic = [
   {name:"Silence",hex:"#F6EFE6",pantone:"PANTONE 11-0610 TSX",memo:"音のない白。"}
 ];
 
-function mount(gridId, arr){
-  const grid = document.getElementById(gridId);
-  arr.forEach(it => grid.append(cardTemplate(it)));
-}
+<!-- cosmic配列のすぐ後ろで一度閉じる -->
+</script>
 
-function cardTemplate(it){
-  const card=document.createElement('article');card.className="card";
-  const sw=document.createElement('div');sw.className="swatch";sw.style.backgroundColor=it.hex;
-  const info=document.createElement('div');info.className="info";
-  const name=document.createElement('div');name.className="name";name.textContent=it.name;
-  const meta=document.createElement('div');meta.className="meta";meta.textContent=it.pantone||it.meta||it.hex;
-  const memo=document.createElement('div');memo.className="memo";memo.textContent=it.memo||"";
-  info.append(name,meta,memo);card.append(sw,info);
-  card.addEventListener('click',()=>openModal(it));
-  return card;
-}
+<!-- テーマ切替ボタンはHTMLとして配置 -->
+<button id="themeToggle" aria-pressed="false">夜</button>
 
-function openModal(it){
-  const o=document.createElement('div');o.className="overlay";
-  o.innerHTML=`<div class="popup" style="background:${it.hex}"><div class="popup-info"><h2>${it.name}</h2><p>${it.pantone||it.meta||it.hex}</p><p>${it.memo||""}</p></div></div>`;
-  o.addEventListener('click',()=>o.remove());document.body.append(o);
-}
+<!-- ここから再びスクリプト -->
+<script>
+  // テーマトグル
+  const btn = document.getElementById('themeToggle');
+  const apply = on => {
+    document.documentElement.classList.toggle('theme-dark', on);
+    btn.setAttribute('aria-pressed', on);
+    btn.textContent = on ? '昼' : '夜';
+  };
+  apply(localStorage.getItem('theme') === 'dark');
+  btn.addEventListener('click', ()=>{
+    const on = !document.documentElement.classList.contains('theme-dark');
+    apply(on);
+    localStorage.setItem('theme', on ? 'dark' : 'light');
+  });
 
-// mount all sections
-mount('sec-coffee', coffee);
-mount('sec-milk', milk);
-mount('sec-choco', choco);
-mount('sec-tea', tea);
-mount('sec-dessert', dessert);
-mount('sec-cocktail', cocktail);
-mount('sec-cosmic', cosmic);
+  // カード生成
+  function mount(gridId, arr){
+    const grid = document.getElementById(gridId);
+    arr.forEach(it => grid.append(cardTemplate(it)));
+  }
+  function cardTemplate(it){
+    const card=document.createElement('article');card.className="card";
+    const sw=document.createElement('div');sw.className="swatch";sw.style.backgroundColor=it.hex;
+    const info=document.createElement('div');info.className="info";
+    const name=document.createElement('div');name.className="name";name.textContent=it.name;
+    const meta=document.createElement('div');meta.className="meta";meta.textContent=it.pantone||it.meta||it.hex;
+    const memo=document.createElement('div');memo.className="memo";memo.textContent=it.memo||"";
+    info.append(name,meta,memo);card.append(sw,info);
+    card.addEventListener('click',()=>openModal(it));
+    return card;
+  }
+  function openModal(it){
+    const o=document.createElement('div');o.className="overlay";
+    o.innerHTML=`<div class="popup" style="background:${it.hex}"><div class="popup-info"><h2>${it.name}</h2><p>${it.pantone||it.meta||it.hex}</p><p>${it.memo||""}</p></div></div>`;
+    o.addEventListener('click',()=>o.remove());document.body.append(o);
+  }
+
+  // mount all sections
+  mount('sec-coffee', coffee);
+  mount('sec-milk', milk);
+  mount('sec-choco', choco);
+  mount('sec-tea', tea);
+  mount('sec-dessert', dessert);
+  mount('sec-cocktail', cocktail);
+  mount('sec-cosmic', cosmic);
 </script>
 </body>
 </html>
