Add new tea and cocktail options with metadata

--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -232,26 +232,33 @@ const choco = [
 ];
 
 const tea = [
-  {name:"Matcha Latte",hex:"#BFD6B8",meta:"RGB(191,214,184)",memo:"深呼吸みたいな緑。"},
-  {name:"Chai",hex:"#B58C6C",meta:"RGB(181,140,108)",memo:"スパイスが喉で灯る。"},
-  {name:"Chamomile",hex:"#E9D0A8",pantone:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
-  {name:"Rooibos Tea",hex:"#A23C26",pantone:"PANTONE 18-1355 TCX",memo:"陽に透かした赤。"}
+  {name:"Matcha",hex:"#9CAF88",meta:"RGB(156,175,136)",memo:"深呼吸みたいな緑。"},
+  {name:"Chai Tea",hex:"#B58C6C",meta:"PANTONE 17-0949 TCX",memo:"スパイスが喉で灯る。"},
+  {name:"Tea Rose",hex:"#DD7077",meta:"PANTONE 16-1620 TCX",memo:"お茶会に咲く薔薇。"},
+  {name:"Chamomile",hex:"#E9D0A8",meta:"PANTONE 13-0916 TCX",memo:"朝に似た黄金色。"},
+  {name:"Rooibos Tea",hex:"#A23C26",meta:"PANTONE 18-1355 TCX",memo:"陽に透かした赤。"}
 ];
 
 const dessert = [
   {name:"Vanilla Ice",hex:"#F0EADA",pantone:"PANTONE 11-0104 TCX",memo:"ひんやりした乳白。"},
   {name:"Vanilla Custard",hex:"#F3E0BE",pantone:"PANTONE 12-0815 TCX",memo:"朝の光を含む甘さ。"},
   {name:"Nutmeg",hex:"#7E5C54",pantone:"PANTONE 18-1326 TCX",memo:"香辛料のぬくもり。"},
+  {name:"Cerise",hex:"#DE3163",meta:"RGB(222,49,99)",memo:"よく熟した桜の実。"},
   {name:"Brown Sugar",hex:"#AF6E4D",pantone:"PANTONE 17-1134 TCX",memo:"焼けた匂いの手前に甘さ。"},
   {name:"Baked Apple",hex:"#B34646",pantone:"PANTONE 18-1648 TCX",memo:"焼きりんごの温度。"}, 
   {name:"Ginger Bread",hex:"#9B5E3E",pantone:"PANTONE 18-1244 TCX",memo:"焼きたての角の香り。"},
+  {name:"Tiramisu",hex:"#7A4E3A",pantone:"PANTONE 19-1233 TCX",memo:"層の影が甘い。"},
+  {name:"Chocolate Cake",hex:"#724F44",meta:"RGB(114,79,68)",memo:"焦げた甘さの記憶。"},
   {name:"Peach Parfait",hex:"#FCC2AC",pantone:"PANTONE 14-1219 TCX",memo:"桃の泡のやさしさ。"}
 ];
 
 const cocktail = [
+  {name:"Blue Curacao",hex:"#32BECD",meta:"RGB(50,190,205)",memo:"少々甘酸っぱい夏空。"},
+  {name:"Silver Bullet",hex:"#81839A",meta:"PANTONE 17-3933 TCX",memo:"たった一つだけの解決法。"},
   {name:"Carnival Glass",hex:"#81E5BC",meta:"RGB(129,229,188)",memo:"微光を帯びた硝子。"},
+  {name:"Chartreuse",hex:"#B5BF50",meta:"RGB(181,191,80)",memo:"嘘みたいな味の緑色。"},
   {name:"Chocolate Martini",hex:"#56453F",meta:"PANTONE 19-1216 TCX",memo:"大人のほろ苦く甘いひと時。"},
-  {name:"Crème de Pêche",hex:"#F1C6B8",pantone:"PANTONE 12-1110 TCX",memo:"桃色のまばたき。"}
+  {name:"Crème de Pêche",hex:"#F1C6B8",meta:"PANTONE 12-1110 TCX",memo:"桃色のまばたき。"}
 ];
 
 const cosmic = [
