Fix Affogato memo and remove Caramel Latte
Updated the memo for 'Affogato' to correct phrasing and removed 'Caramel Latte' entry.

--- a/cafeatsume.html
+++ b/cafeatsume.html
@@ -195,10 +195,9 @@ const milk = [
   {name:"Crème Brûlée",hex:"#E4D7C5",pantone:"PANTONE 13-1006 TPG",memo:"光が焦がすミルクの縁。"},
   {name:"Café au Lait",hex:"#AE8774",meta:"PANTONE 17-1227 TCX",memo:"午後の日差しとミルクタイム。"},
   {name:"Lattè",hex:"#C5A582",meta:"PANTONE 15-1220 TCX",memo:"泡の斜面が静かに沈む。"},
-  {name:"Affogato",hex:"#A98B71",meta:"RGB(169,139,113)",memo:"溶けかけの月が夜が落ちる。"},
+  {name:"Affogato",hex:"#A98B71",meta:"RGB(169,139,113)",memo:"溶けかけの月に夜が落ちる。"},
   {name:"Cappuccino",hex:"#633F32",meta:"PANTONE 19-1220 TCX",memo:"縁に残る泡のヘイロー。"},
   {name:"Caramel Cream",hex:"#F4BA94",pantone:"PANTONE 13-1022 TCX",memo:"天井の明かりは飴色。"},
-  {name:"Caramel Latte",hex:"#C49A6C",meta:"RGB(196,154,108)",memo:"天井の照明がとろける。"},
   {name:"Irish Cream",hex:"#C0AB92",meta:"PANTONE 14-1208 TCX",memo:"遠くから包むぬくもり。"},
   {name:"Almond Milk",hex:"#E7E2DA",pantone:"PANTONE 12-4301 TCX",memo:"音のしないやさしさ。"},
   {name:"Buttercream",hex:"#EFE3C6",pantone:"PANTONE 11-0110 TCX",memo:"横たわる陽だまり。"},
